<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_top_bg"
    android:clipToPadding="true"
    android:fitsSystemWindows="true" >
 <include
        android:id="@+id/top"
        layout="@layout/top_title" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:layout_below="@+id/top" >

        <ScrollView
            android:id="@+id/ScrollView1"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@color/white"
            android:overScrollMode="never"
            android:scrollbars="none" >

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical" >

                <RadioGroup
                    android:id="@+id/rg_main_btns"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="vertical" >

                    <RadioButton
                        android:id="@+id/rb_1"
                        style="@style/MMTabButton"
                        android:checked="true"
                        android:text="@string/hotspot_1" />

                    <RadioButton
                        android:id="@+id/rb_2"
                        style="@style/MMTabButton"
                        android:text="@string/hotspot_2" />

                    <RadioButton
                        android:id="@+id/rb_3"
                        style="@style/MMTabButton"
                        android:text="@string/hotspot_3" />

                    <RadioButton
                        android:id="@+id/rb_4"
                        style="@style/MMTabButton"
                        android:text="@string/hotspot_4" />

                    <RadioButton
                        android:id="@+id/rb_5"
                        style="@style/MMTabButton"
                        android:text="@string/hotspot_5" />

                    <RadioButton
                        android:id="@+id/rb_6"
                        style="@style/MMTabButton"
                        android:text="@string/hotspot_6" />

                    <RadioButton
                        android:id="@+id/rb_7"
                        style="@style/MMTabButton"
                        android:text="@string/hotspot_7" />

                    <RadioButton
                        android:id="@+id/rb_8"
                        style="@style/MMTabButton"
                        android:text="@string/hotspot_8" />

                    <RadioButton
                        android:id="@+id/rb_9"
                        style="@style/MMTabButton"
                        android:text="@string/hotspot_9" />

                    <RadioButton
                        android:id="@+id/rb_10"
                        style="@style/MMTabButton"
                        android:text="@string/hotspot_10" />

                    <RadioButton
                        android:id="@+id/rb_11"
                        style="@style/MMTabButton"
                        android:text="@string/hotspot_11" />

                    <RadioButton
                        android:id="@+id/rb_12"
                        style="@style/MMTabButton"
                        android:text="@string/hotspot_12" />
                </RadioGroup>
            </LinearLayout>
        </ScrollView>

        <GridView
            android:id="@+id/gv_unit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_toRightOf="@+id/ScrollView1"
            android:background="@color/app_bg"
            android:gravity="center"
            android:horizontalSpacing="5dp"
            android:listSelector="@null"
            android:numColumns="2"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:scrollbars="none"
            android:verticalSpacing="9dp" />
    </LinearLayout>

</RelativeLayout>