<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/exit_bg"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/exit_desc"
        android:textColor="@color/app_text"
        android:textSize="@dimen/app_18" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_confirm"
            style="@style/exit_btn"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:text="@string/exit_confirm" />

        <Button
            android:id="@+id/btn_cancel"
            style="@style/exit_btn"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:text="@string/exit_cancel" />
    </LinearLayout>

</LinearLayout>