<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_top_bg"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical" >

    <include
        android:id="@+id/top"
        layout="@layout/top_title" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:overScrollMode="never" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/sug_ont"
                android:textColor="@color/app_text"
                android:textSize="@dimen/app_16" />

            <TextView
                android:id="@+id/spinner1"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/spinnergray"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:paddingRight="60dp"
                android:textColor="@color/app_text"
                android:textSize="@dimen/app_16" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/sug_two"
                android:textColor="@color/app_text"
                android:textSize="@dimen/app_16" />

            <EditText
                android:id="@+id/editText1"
                style="@style/suggestion_edittext" >
            </EditText>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/sug_three"
                android:textColor="@color/app_text"
                android:textSize="@dimen/app_16" />

            <EditText
                android:id="@+id/editText2"
                style="@style/suggestion_edittext" >
            </EditText>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/sug_four"
                android:textColor="@color/app_text"
                android:textSize="@dimen/app_16" />

            <EditText
                android:id="@+id/editText3"
                style="@style/suggestion_edittext" />

            <Button
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/green_btn"
                android:text="@string/sug_five"
                android:textColor="@color/app_text" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>